--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.4",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@prisma/client": "^4.11.0"
+    "@prisma/client": "^4.11.0",
+    "next-i18next": "^13.0.3",
+    "react-i18next": "^12.2.0",
+    "i18next": "^22.4.10"
   },
   "devDependencies": {
     "eslint": "8.36.0",
