--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
+    "i18next": "^22.4.10",
     "next": "^13.2.4",
+    "next-i18next": "^13.0.3",
+    "next-seo": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@prisma/client": "^4.11.0",
-    "next-i18next": "^13.0.3",
-    "react-i18next": "^12.2.0",
-    "i18next": "^22.4.10"
+    "react-i18next": "^12.2.0"
   },
   "devDependencies": {
     "eslint": "8.36.0",
